# -----------------------------------------------------------------------------
# ixlib old_headers makefile
# -----------------------------------------------------------------------------
# (c) Andreas Kloeckner 2000. See COPYING for license.
# -----------------------------------------------------------------------------




# Source files ----------------------------------------------------------------
include_HEADERS=ixlib_config.hh ixlib_base.hh ixlib_array.hh ixlib_garbage.hh \
  ixlib_exbase.hh ixlib_exgen.hh ixlib_exio.hh \
  ixlib_string.hh ixlib_re.hh ixlib_re_impl.hh \
  ixlib_numconv.hh ixlib_numeric.hh \
  ixlib_random.hh ixlib_ring_queue.hh \
  ixlib_cmdline.hh \
  ixlib_geometry.hh ixlib_geometry_impl.hh \
  ixlib_polygon.hh ixlib_polygon_impl.hh \
  ixlib_matrix.hh ixlib_matrix_impl.hh \
  ixlib_textfile.hh ixlib_scanner.hh ixlib_token_lex.hh \
  ixlib_xml.hh \
  ixlib_javascript.hh \
  ixlib_drawing_functions.hh 

